--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A starter project including full setup for Jekyll, GulpJS, Jade, SASS & BrowserSync -- Based on devtips",
   "main": "gulpfile.js",
   "scripts": {
+    "start": "./node_modules/gulp/bin/gulp.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Maikko Aleman",
